# music-adapters

./: .gitignore  CMakeLists.txt  Doxyfile  NefEncoder.cpp  README.rst  mainpage.md
adapters/: ArgmaxAdapter.cpp  ArgmaxAdapter.h  ContContAdapter.cpp  ContContAdapter.h  ContZMQAdapter.cpp  ContZMQAdapter.h  DiscretizeAdapter.cpp  DiscretizeAdapter.h  DiscretizeAdapterPois.cpp  DiscretizeAdapterPois.h  DopamineSpike.cpp  DopamineSpike.h  FunctionAdapter.cpp  FunctionAdapter.h  SigmoidAdapter.cpp  SigmoidAdapter.h  ThresholdAdapter.cpp  ThresholdAdapter.h  VecsumAdapter.cpp  VecsumAdapter.h  ZMQContAdapter.cpp  ZMQContAdapter.h
base/: Adapter.cpp  Adapter.h  ContInPort.cpp  ContInPort.h  ContOutPort.cpp  ContOutPort.h  EventInPort.cpp  EventInPort.h  EventOutPort.cpp  EventOutPort.h  IAFNeuron.cpp  IAFNeuron.h  InPort.cpp  InPort.h  OutPort.cpp  OutPort.h  Port.h  ZMQContAdapter.h  ZMQInPort.cpp  ZMQInPort.h  ZMQOutPort.cpp  ZMQOutPort.h
cmake/modules/: FindMUSIC.cmake
decoder/: LinearDecoder.cpp  LinearDecoder.h
encoder/: NefEncoder.cpp  NefEncoder.h  PoissonEncoder.cpp  PoissonEncoder.h  RateEncoder.cpp  RateEncoder.h
lib/: base.h  rtclock.cpp  rtclock.h
test/: create_grid_postitions.py  create_voting_readout.py  grid_pos.json  receiver.py  sender.py  test.music  test_event.music
test/test_nef_encoder/: sender.py  test.music  test.py
test/test_zmq_adapter/: receiver.py  sender.py  test.music  test.sh
